<resources>
    <string name="app_name">TrainTrack UK</string>
    <string name="platform">Platform</string>
    <string name="operator">Operated by %1$s</string>
    <string name="exp">Exp %1$s</string>
    <string name="cancelled">Cancelled</string>
    <string name="coaches">%1$d Coaches</string>
    <string name="vertical_dash">|</string>
    <string name="search_station">Search for a station</string>
    <string name="choose_station">Or select a previous station</string>
    <string name="enter_station">Enter a station&#8230;</string>
    <string name="expected">Expected %1$s</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="on_time_departure">Departed On Time</string>
    <string name="delayed_departure">Departed %1$s</string>
    <string name="platform_with_no">Platform %1$d</string>
    <string name="on_time">On Time</string>
    <string name="refresh">Refresh content</string>
    <string name="journey_time">Journey Time: %1$s</string>
    <string name="stops">Stops: %1$d</string>
    <string name="station_info">Station Information</string>
    <string name="arrivals">Arrivals</string>
    <string name="departures">Departures</string>
    <string name="no_history">No previous searches to show!</string>
    <string name="last_updated">Last Updated: %1$s</string>
    <string name="operated_by">Operated by</string>
    <string name="directions">Get Directions</string>
    <string name="last_accessed">Last Accessed:</string>
    <string name="station_with_crs">%1$s (%2$s)</string>
    <string name="brackets">(%1$s)</string>
    <string name="terminates_here">This service terminates here</string>
    <string name="to_with_destination">To %1$s</string>
    <string name="go_back">Go back to the previous page.</string>
    <string name="clear_history">Clear History</string>
</resources>