<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_border"
    android:paddingBottom="16dp"
    android:textAlignment="center"
    android:visibility="visible">

    <TextView
        android:id="@+id/txt_dash"
        android:layout_width="11dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/vertical_dash"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textSize="17sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/txt_journey_time"
        app:layout_constraintTop_toBottomOf="@+id/txt_status" />

    <TextView
        android:id="@+id/txt_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="11:25" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:textColor="@color/on_time"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_departure"
        tools:text="On time" />

    <TextView
        android:id="@+id/txt_platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/platform"
        android:textAlignment="center"
        android:textColor="@color/main_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_platform_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_platform"
        app:layout_constraintTop_toBottomOf="@+id/txt_platform"
        tools:text="1" />

    <TextView
        android:id="@+id/txt_journey_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/secondary_text"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_status"
        tools:text="1h 20m" />

    <TextView
        android:id="@+id/txt_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeTextType="uniform"
        android:gravity="start|center_vertical"
        android:maxWidth="220dp"
        android:maxHeight="22dp"
        android:textColor="@color/secondary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txt_operated_by"
        app:layout_constraintTop_toBottomOf="@+id/txt_status"
        tools:text="Cross Country" />

    <TextView
        android:id="@+id/txt_station"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/main_text"
        app:layout_constraintBottom_toTopOf="@+id/txt_subinfo"
        app:layout_constraintEnd_toStartOf="@+id/txt_platform"
        app:layout_constraintStart_toEndOf="@+id/txt_status"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Exeter St Davids (EXD)" />

    <TextView
        android:id="@+id/txt_subinfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal|center_vertical"
        android:maxHeight="20sp"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/txt_status"
        app:layout_constraintEnd_toStartOf="@+id/txt_platform_no"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_status"
        tools:text="Via Bristol Temple Meads" />

    <TextView
        android:id="@+id/txt_operated_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/operated_by"
        android:textColor="@color/secondary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txt_dash"
        app:layout_constraintTop_toBottomOf="@+id/txt_status" />

</androidx.constraintlayout.widget.ConstraintLayout>